--- a/irma-backend/package.json
+++ b/irma-backend/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@privacybydesign/irma-backend": "^0.1.5",
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "redis": "^4.6.7"
     }
 }
